--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,134 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chatBox {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+}
+
+.cs-message.cs-message--outgoing .cs-message__content {
+  border-radius: 100px;
+  background-color: #4b8efe;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.chatBox .cs-main-container {
+  border-right-width: 0;
+  border-left-width: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px;
+}
+.header > div:first-child {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  font-size: 1em;
+  line-height: 1em;
+  flex: 1;
+  overflow: hidden;
+}
+.header > div:first-child div {
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-weight: bold;
+}
+.header > div:first-child img {
+  height: 30px;
+  margin-right: 10px;
+}
+.header img {
+  height: 24px;
+}
+
+.header > div:last-child {
+  height: 24px;
+}
+.inputForm {
+  padding: 14px;
+}
+.inputBox {
+  display: flex;
+  border-radius: 100px;
+  align-items: center;
+  background-color: #ececec;
+  height: 48px;
+  padding: 8px;
+  box-sizing: border-box;
+  padding-right: 18px;
+}
+.inputBox input {
+  height: 100%;
+  box-sizing: border-box;
+  border: none;
+  padding: 10px;
+  outline: 0;
+  flex: 1;
+  background-color: transparent;
+}
+.inputBox input[type="submit"] {
+  background: linear-gradient(#0033ff, #4e92fe);
+  border-radius: 100px;
+  color: #fff;
+  line-height: 0.95em;
+}
+.inputBox .leftIcon {
+  background: linear-gradient(#0033ff, #4e92fe);
+  border-radius: 100px;
+  height: 34px;
+  width: 34px;
+  min-width: 34px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 8px;
+}
+.inputBox .leftIcon img {
+  width: 100%;
+}
+.inputBox .rightIcon {
+  line-height: 0;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+.inputBox .rightIcon img {
+  height: 24px;
+  line-height: 0;
+}
+
+@media screen and (min-width: 800px) {
+  .headerBox,
+  .inputForm {
+    background-color: rgba(255, 255, 255, 0.4);
   }
-  to {
-    transform: rotate(360deg);
+  .chatBox {
+    background: rgba(255, 255, 255, 0.4);
+    border: solid 1px #d1dbe3;
+    max-width: 400px;
+    width: 100vw;
+    position: absolute;
+    right: 15%;
+    height: 80vh;
+    margin-top: 10vh;
+  }
+  body {
+    /* background-color: red; */
+    background-image: url(./bg.jpg);
+    background-size: cover;
+    height: 100vh;
+  }
+  .cs-main-container,
+  .cs-chat-container,
+  .cs-message-list,.cs-typing-indicator {
+    background: transparent !important;
   }
 }
+
+/* .cs-message-input__content-editor-wrapper{
+  
+} */
