--- a/src/components/customPopup/popup.css
+++ b/src/components/customPopup/popup.css
@@ -1,11 +1,13 @@
 .mask {
   position: fixed;
-  background: rgba(0, 0, 0, 0.5);
+  background: #fafafa;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
   z-index: 999;
+  display: flex;
+  align-items: center;
 
   opacity: 0;
 }
@@ -17,27 +19,29 @@
   opacity: 1;
 } */
 .mask .popup {
-  max-width: 90vw;
+  max-width: 80vw;
   margin: 0 auto;
-  background-color: white;
+  background-color: #fefefe;
   border-radius: 5px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.137);
-  transform: translateY(calc(45vh - 50%));
+  /* box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.137); */
+  border: solid 1px #cfcfcf;
+  transform: translateY(-4vh);
   box-sizing: border-box;
+  overflow: hidden;
 }
 .mask .popup-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  border-bottom: solid 1px #d1dbe3;
-  padding: 0.5em 1em;
-  height: 2.5em;
   user-select: none;
+}
+.mask .popup-header img{
+  width: 100%;
 }
 .mask .popup-content {
   justify-content: space-between;
   align-items: center;
-  padding: 0.5em 1em;
+  padding: 0.5em 2em;
 }
 .mask .popup-content input {
   width: 100%;
@@ -46,6 +50,7 @@
   outline: none;
   border-radius: 5px;
   box-sizing: border-box;
+  background-color: #fafafa;
   padding: 0 1em;
   margin-top: 1em;
 }
@@ -55,7 +60,7 @@
   line-height: 1.5em;
 }
 .mask .popup-footer {
-  padding: 0.5em 1em 0.8em;
+  padding: 0.5em 2em 1.5em;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -68,8 +73,9 @@
   cursor: pointer;
   height: 3em;
   padding: 0 2em;
-  border-radius: 0.2em;
+  border-radius: 5px;
   user-select: none;
+  width: 100%;
 }
 .mask .popup-footer .confirm:active {
   background-color: var(--main--color);
@@ -77,6 +83,7 @@
 }
 @media screen and (min-width: 800px) {
   .mask .popup {
-    max-width: 450px;
+    max-width: 350px;
   }
 }
+
