--- a/src/components/customPopup/popup.css
+++ b/src/components/customPopup/popup.css
@@ -8,8 +8,11 @@
   z-index: 999;
   display: flex;
   align-items: center;
-
   opacity: 0;
+  flex-direction: column;
+  gap: 1em;
+  justify-content: center;
+  user-select: none;
 }
 .mask.close {
   opacity: 0;
@@ -18,14 +21,38 @@
 /* .mask.show {
   opacity: 1;
 } */
+.mask .tips {
+  width: 80vw;
+  font-size: 14px;
+  text-align: center;
+  margin: 0 auto;
+  background-color: #fefefe;
+  border-radius: 5px;
+  border: solid 1px #e2e2e2;
+  box-sizing: border-box;
+  overflow: hidden;
+  height: 3.5em;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.041);
+  line-height: 3.3em;
+  transform: translateY(-2vh);
+}
+.mask .tips b {
+  color: var(--main--color);
+  cursor: pointer;
+  margin-left: 0.3em;
+}
+.mask .tips b:hover{
+  opacity: 0.8;
+}
+
 .mask .popup {
   max-width: 80vw;
   margin: 0 auto;
   background-color: #fefefe;
   border-radius: 5px;
-  /* box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.137); */
-  border: solid 1px #cfcfcf;
-  transform: translateY(-4vh);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.041);
+  border: solid 1px #e2e2e2;
+  transform: translateY(-2vh);
   box-sizing: border-box;
   overflow: hidden;
 }
@@ -35,7 +62,7 @@
   align-items: center;
   user-select: none;
 }
-.mask .popup-header img{
+.mask .popup-header img {
   width: 100%;
 }
 .mask .popup-content {
@@ -76,14 +103,15 @@
   border-radius: 5px;
   user-select: none;
   width: 100%;
+  font-weight: bold;
 }
 .mask .popup-footer .confirm:active {
   background-color: var(--main--color);
   opacity: 0.8;
 }
 @media screen and (min-width: 800px) {
+  .mask .tips,
   .mask .popup {
     max-width: 350px;
   }
 }
-
